--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Final Test</title>
+    <title>Home</title>
+    <!-- CSS Section -->
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="/Content/app.css">
@@ -22,7 +23,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="index.html"><i class="fas fa-home fa-lg"></i> Home</a>
                     </li>
                     <li class="nav-item">
@@ -69,9 +70,14 @@
         </div>
     </main>
 
+    <!-- JavaScript Section-->
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    
+    <!-- App Scripts -->
+    <script src="/Scripts/objects/contact.js"></script>
+    <script src="/Scripts/objects/addressbook.js"></script>
     <script src="/Scripts/app.js"></script>
 </body>
 
