--- a/public/contacts.html
+++ b/public/contacts.html
@@ -24,10 +24,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html"><i class="fas fa-home fa-lg"></i> Home</a>
+                        <a class="nav-link" href="index.html">
+                            <i class="fas fa-home fa-lg"></i> Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="contacts.html"><i class="fas fa-users fa-lg"></i> Contacts</a>
+                        <a class="nav-link" href="contacts.html">
+                            <i class="fas fa-users fa-lg"></i> Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -35,11 +37,31 @@
     </header>
 
     <main>
-        <div class="container">
+<!--   <div class="container">
             <h1 class="display-6">Contacts</h1>
             <div id="contactList">
-                <!-- Inject your Dynamic HTML here -->
-            </div>  
+                <!-- Inject your Dynamic HTML here 
+            </div> -->
+            <div class="jumbotron">
+                <h1 class="display-4">My Contacts</h1>
+            </div>
+
+            <div class="row">
+                <div class="col-md-10">
+                    <table class="table table-striped">
+                        <thead>
+                            <th scope="col"></th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Contact Number</th>
+                            <th scope="col">Email Address</th>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -47,7 +69,7 @@
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/@fortawesome/fontawesome-free/js/all.min.js"></script>
-    
+
     <!-- App Scripts -->
     <script src="/Scripts/objects/contact.js"></script>
     <script src="/Scripts/objects/addressbook.js"></script>
